# director

./: .gitignore  AGENTS.md  LICENSE.txt  README.md  manage_docs.py  pyproject.toml
.github/workflows/: deploy_pages.yml
buildkite/: pipeline.yml
director/: QVTKRenderWindowInteractor_fix.patch  README.md  VTK_PATCH_README.md  apply_vtk_fix.py  apply_vtk_patch.sh  next_steps.md  pyproject.toml  vtk_patch.patch
director/examples/: example_script.py  hello_world.py  mujoco_model.py  mujoco_reader.py  pyqtgraph_example.py  test_debugvis.py  test_frame_item.py  test_framewidget.py  test_image2d_item.py  test_propertiespanel.py  test_script.py  test_terrain_interactor.py  vtk_widget.py
director/src/director/: __init__.py  applogic.py  appsettings.py  argutils.py  asynctaskqueue.py  callbacks.py  cameracontrol.py  componentgraph.py  consoleapp.py  debugVis.py  desktop_launcher.py  dict_table_widget.py  dscamera.py  ffmpeg_writer.py  fieldcontainer.py  filterUtils.py  find_timestamp_index.py  flags.py  frame_properties.py  frameupdater.py  framewidget.py  gridSource.py  hello_world.py  icons.py  ioUtils.py  main.py  mainwindow.py  mainwindowapp.py  math.py  mujoco_model.py  objectmodel.py  opendatahandler.py  outputconsole.py  plot_widget.py  profiler.py  propertiespanel.py  propertyset.py  python_console.py  qtutils.py  screen_recorder.py  (+19 more)
director/src/director/examples/: hello_world.py
director/tests/: __init__.py  conftest.py  test_applogic.py  test_componentfactory.py  test_consoleapp.py  test_fieldcontainer.py  test_filterUtils.py  test_gridSource.py  test_hello_world.py  test_image2d_item.py  test_ioUtils.py  test_mujoco_model.py  test_objectmodel.py  test_property_set.py  test_settings_dialog.py  test_shallowCopy.py  test_show_image_update_polydata.py  test_simple_mujoco_model.xml  test_timercallback.py  test_transformUtils.py  test_viewbounds.py  test_vtkNumpy.py  test_vtk_widget.py  test_vtk_widget_custom_bounds.py
distro/superbuild/cmake/: externals.cmake
docker/: Dockerfile  docker.py  format_check.sh  pytest_xvfb.sh  run_docker_docs.sh  run_docker_format_check.sh  run_docker_tests.sh  user_bootstrap.sh
docs/: api.rst  build.sh  clean.sh  conf.py  examples.rst  index.rst  manage_docs.py  tutorial.rst  view.sh
docs/_templates/: class.rst  custom-module-template.rst
docs/_templates/sidebar/: links.html
examples/: example_script.py  vtk_widget.py
src/app/: CMakeLists.txt  consoleApp.cpp  ddMainWindow.cpp  ddMeasurementPanel.ui  ddPythonManager.cpp  ddPythonManager.h  ddQVTKWidgetView.cpp  ddSortFilterProxyModel.h  drakeVisualizerApp.cpp  wrapped_methods.txt
src/director/: __init__.py  _pyqt_patch.py  appsettings.py  argutils.py  asynctaskqueue.py  callbacks.py  camerabookmarks.py  camerainterpolator.py  componentgraph.py  consoleapp.py  debugVis.py  depthscanner.py  desktop_launcher.py  dscamera.py  ffmpeg_writer.py  fieldcontainer.py  filterUtils.py  find_timestamp_index.py  frame_properties.py  frame_sync.py  frame_trace.py  framewidget.py  gradientbackground.py  icons.py  imageview.py  ioUtils.py  mainwindowapp.py  maptileviewer.py  math.py  measurementpanel.py  mouselook.py  objectmodel.py  opendatahandler.py  outputconsole.py  plot_widget.py  pointpicker.py  processcommand.py  propertiespanel.py  propertyset.py  python_console.py  (+17 more)
src/director/examples/: __main__.py  console_app.py  draw_shapes.py  launcher.py  (+10 more)
src/python/: CMakeLists.txt
tests/: __init__.py  conftest.py  test_applogic.py  test_componentfactory.py  test_consoleapp.py  test_fieldcontainer.py  test_hello_world.py  test_mainwindow.py  test_objectmodel.py  test_settings_dialog.py  test_timercallback.py  test_viewbounds.py  test_vtk_widget.py  test_vtk_widget_custom_bounds.py
(+33 files in other folders)
