[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "director"
version = "2.0.0"
description = "Director - A robotics interface and visualization framework using VTK and Qt"
readme = "README.md"
requires-python = ">=3.10.19"
dependencies = [
    "vtk>=9.0",
    "qtpy",
    "PySide6",
    "pyqtgraph",
    "qtconsole",
    "ipykernel",
    "jupyter-client",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
opencv = ["opencv-python"]
mujoco = ["mujoco"]
test = [
    "pytest",
    "ruff",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0.0",
    "furo",
]
all = [
    "opencv-python",
    "mujoco",
    "pytest",
    "ruff",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0.0",
    "furo",
]
dev = [
    "director[all]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
director = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Pyflakes (F) and Bugbear (B) for bug-finding, and "I" isort
select = ["F", "B", "I"]
ignore = [
    "E501", # Ignore line-length violations (let the formatter handle it)

    "B007",
    "B006",
    "B019",
    "B904",
    "B905",
]