[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "director"
version = "2.0.0"
description = "Director - A robotics interface and visualization framework using VTK and Qt"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10.19"
dependencies = [
    "vtk>=9.0",
    "qtpy",
    "numpy",
    "scipy",
]

[project.optional-dependencies]

# Extra dependencies
extras = ["director[mujoco,opencv,plot,qtconsole]"]
mujoco = ["mujoco"]
opencv = ["opencv-python"]
plot = [
    "matplotlib",
    "pyqtgraph"
]
qtconsole = [
    "qtconsole",
]

# Qt bindings
pyside = ["PySide6"]
pyqt = ["PyQt6"]

# Dev, docs, test
dev = [ "director[extras,pyside,docs,test]"]
docs = [
    "furo",
    "sphinx",
]
test = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
director = ["assets/*.png", "assets/*.ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Pyflakes (F) and Bugbear (B) for bug-finding, and "I" isort
select = ["F", "B", "I"]
ignore = [
    "E501", # Ignore line-length violations (let the formatter handle it)

    "B007",
    "B006",
    "B019",
    "B904",
    "B905",
]