[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "director"
version = "2.0.0"
description = "Director 2.0 - A modern Python visualization library using VTK and Qt"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "vtk>=9.0",
    "qtpy>=2.0.0",
    "PySide6>=6.0.0",
    "pyqtgraph>=0.14.0",
    "qtconsole>=5.4.0",
    "ipykernel>=6.0.0",
    "jupyter-client>=7.0.0",
    "numpy>=1.20.0",
    "mujoco>=3.0.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.setuptools]
packages = ["director"]

[tool.setuptools.package-dir]
director = "src/director"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

